# microBioRust

./: .gitignore  404.html  ERROR_HANDLING.md  IMPROVEMENTS_SUMMARY.md  README.md  ROADMAP.md  index.html  index.json  info.json  regressions.json  regressions.xml  sitemap.xml
.github/workflows/: microbiorust-py_benchmarks.yml  python-app.yml
formats_and_parsing/: index.html
graphs/biopython/branch-main/codecarbon/machine-github-runner/maturin/python-3.12/: bench_pipeline.PipelineSuite.peakmem_process_all.json  bench_pipeline.PipelineSuite.time_process_all.json  bench_pipeline.PipelineSuite.track_energy.json  bench_pipeline.PipelineSuite.track_parsing_latency.json  summary.json
graphs/biopython/branch-main/machine-github-runner/python-3.12/: bench_pipeline.PipelineSuite.peakmem_process_all.json  bench_pipeline.PipelineSuite.time_process_all.json  bench_pipeline.PipelineSuite.track_parsing_latency.json  summary.json
graphs/branch-main/machine-github-runner/python-3.12/: bench_pipeline.PipelineSuite.time_process_all.json  bench_pipeline.PipelineSuite.time_process_all_iterations.json  summary.json
graphs/summary/: bench_pipeline.PipelineSuite.peakmem_process_all.json  bench_pipeline.PipelineSuite.time_process_all.json  bench_pipeline.PipelineSuite.track_energy.json  bench_pipeline.PipelineSuite.track_parsing_latency.json
installation/: index.html
microBioRust/: Cargo.toml  cleaned_dna.fasta  new_output_embl.gbk  new_output_embl.gff  test_output.gff  test_output_embl.gff
microBioRust/examples/src/: blast_parse.rs
microBioRust/src/: align.rs  blast.rs  embl.rs  gbk.rs  lib.rs  record.rs
microBioRust/tests/: blast_parser.rs  msa_parser.rs
microbiorust-py/: .gitignore  Cargo.toml  README.md  asv.conf.json  bp_gbk2faa.py  pyproject.toml  rust_via_python_gbk2faa.py  rust_via_python_writefaa.py
microbiorust-py/benchmarks/: bench_pipeline.py  bp_equivalent_gbktofaacount.py  energy_ci.py  rust_via_python_countgbk2faa.py
microbiorust-py/microbiorust/: __init__.py
microbiorust-py/src/: lib.rs  macros.rs
microbiorust-py/tests/: test_mbr.py
results/: benchmarks.json
results/github-runner/: 425c966e-virtualenv-py3.12.json  6eb6b7a9-virtualenv-py3.12-biopython-codecarbon-maturin.json  77f17eca-virtualenv-py3.12-biopython-codecarbon-maturin.json  bc415c7c-virtualenv-py3.12-biopython.json  d2ecffaa-virtualenv-py3.12-biopython-codecarbon-maturin.json
search/: search_index.json
usage/: index.html
windows_install/: index.html
