[package]
name = "microbiorust-py"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["bioinformatics","micro","bio","genomics","sequence-analysis"]
description = "Microbiology friendly bioinformatics Rust functions"
categories = ["science::bioinformatics::sequence-analysis", "science::bioinformatics::genomics", "science::bioinformatics","science","data-structures"]
exclude = [".git",".gitignore"]
repository = "https://github.com/LCrossman/microBioRust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[target.aarch64-apple-darwin]
# This 'Wl,-rpath' flag embeds the directory into the binary metadata
rustflags = ["-C", "link-arg=-Wl,-rpath,/path/from/sysconfig/LIBDIR"]

[target.x86_64-apple-apple-darwin]
rustflags = ["-C", "link-arg=-Wl,-rpath,/path/from/sysconfig/LIBDIR"]

[lib]
name = "microbiorust"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.25.0" 
features = ["auto-initialize", "abi3-py311"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
microBioRust = { path = "../microBioRust" }
microBioRust-seqmetrics = { git = "https://github.com/LCrossman/microBioRust", branch = "main" }
pythonize = "0.25"
tokio = { version = "1.49.0", features = ["full"] }

