[workspace]

[package]
name = "microbiorust-py"
version = "0.1.5"
edition = "2024"
license = "MIT"
keywords = ["bioinformatics","micro","bio","genomics","sequence-analysis"]
description = "Python bindings for microBioRust Microbiology friendly bioinformatics Rust functions"
categories = ["science::bioinformatics::sequence-analysis", "science::bioinformatics::genomics", "science::bioinformatics","science","data-structures"]
exclude = [".git",".gitignore","config.toml","K12_ribo.gbk","Rhiz3841.gbk.gb","Rhiz3841.gbk.gb_out.faa","rust_via_python_countgbk2faa.py","rust_via_python_gbk2faa.py","asv.conf.json","benchmarks/"]
repository = "https://github.com/microBioRust/microBioRust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[lib]
name = "microbiorust"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.25.0"
features = ["extension-module", "abi3-py310"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
microBioRust = { version = "0.1.3", path = "../microBioRust" }
microBioRust-seqmetrics = { version = "0.1.3", path = "../seqmetrics" }
pythonize = "0.25"
tokio = { version = "1.49.0", features = ["full"] }
